@@ -44,6 +44,7 @@ static void find_active_keybindings(df::viewscreen *screen)
     sorted_keys.clear();
 
     vector<string> valid_keys;
+
     for (char c = 'A'; c <= 'Z'; c++)
     {
         valid_keys.push_back(string(&c, 1));
@@ -53,6 +54,8 @@ static void find_active_keybindings(df::viewscreen *screen)
     {
         valid_keys.push_back("F" + int_to_string(i));
     }
+
+    valid_keys.push_back("`");
 
     auto current_focus = Gui::getFocusString(screen);
     for (int shifted = 0; shifted < 2; shifted++)
